--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(brms.ordinal)
 export(calculate_marginal_effect)
 export(create_combined_dot_plot)
 export(create_combined_plot)
+export(create_combined_sunflower_plot)
 export(fit_ordered_logit)
 export(fit_ordered_probit)
 export(ggMargins_categories)
